# theia

./: .gitignore  Cargo.toml  README.md  shell.nix
src/: command.rs  config.rs  error.rs  event.rs  lib.rs  prelude.rs  typemap.rs  util.rs
src/discord/message/: cmdhooks.rs  mod.rs
src/interop/: message.rs
src/parser/: cmdhelp.rs  cmdinvoke.rs  mod.rs
src/plugin/: comms.rs  config.rs  mod.rs
src/util/: mod.rs  runnable.rs
